deploy-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a
  labels:
    tenant: tenant-a
---
apiVersion: v1
kind: Service
metadata:
  name: servera-service
  namespace: tenant-a
spec:
  selector:
    app: servera
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servera
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servera
  template:
    metadata:
      labels:
        app: servera
    spec:
      containers:
      - image: docker.io/mccutchen/go-httpbin:v2.15.0
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8080
