deploy-b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-b
  labels:
    tenant: tenant-b
---
apiVersion: v1
kind: Service
metadata:
  name: serverb-service
  namespace: tenant-b
spec:
  selector:
    app: serverb
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverb
  namespace: tenant-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serverb
  template:
    metadata:
      labels:
        app: serverb
    spec:
      containers:
      - image: docker.io/istio/examples-helloworld-v1:1.0
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 5000
