gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: default
spec:
  gatewayClassName: istio # <-- important when you're using istio
  listeners:
  - name: servera
    hostname: servera.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All  # allow routes from all namespaces (multi-tenant)
  - name: serverb
    hostname: serverb.example.com
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
